Add functionality and finish app

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
 
     <!-- Color Palette Display -->
     <div style="height: 60%;">
-        <div id="color-palette"></div>
+        <div id="color-palette">
+        </div>
     </div>
 
     <!-- Generate Palette Button -->
     <div style="height: 20%;">
-        <input type="number" id="num-colors" name="num-colors" min="1" max="10" value="4">
-        <button id="gen-pal" onclick="genColors()">GENERATE PALETTE</button>
+        <input type="number" id="num-colors" name="num-colors" value="4">
+        <button id="gen-pal">GENERATE PALETTE</button>
     </div>
 </body>
 
